# better-chess-engine

./: .clang-format  .gitignore  .gitmodules  LICENSE  manage.sh  meson.build  meson_options.txt  requirements.txt
.github/workflows/: build.yml
githooks/: pre-commit
githooks/workflows/: build.yml
src/: meson.build
src/app/: main.cpp  meson.build
src/board/: bitboard.h  board.cpp  board.h  meson.build
src/board/include/: bitboard.h  board.h
src/board/src/: bitboard.cpp  board.cpp
src/conf/: const.h  enums.h  paths.h  types.h
src/engine/: meson.build
src/engine/benchmark/: benchmark.h
src/engine/benchmark/v1.0/: perft_results-DEPTH_6.txt  perft_results.txt
src/engine/board/: bitboard.h  board.cpp  board.h  magic_const.h  magics_generator.cpp  magics_generator.h  mask.cpp  mask.h  meson.build  state.cpp  state.h
src/engine/core/: const.h  enums.h  types.h
src/engine/game/: game.cpp  game.h  game_console.cpp  meson.build  move.cpp  move.h  move_generator.h  move_list.cpp  move_list.h
src/engine/include/: bitboard.h  board.h  game.h
src/engine/magics_generator/: magics_generator.cpp  magics_generator.h  meson.build
src/engine/printer/: printer.h
src/engine/src/: bitboard.cpp  board.cpp  game.cpp
src/game/: game.cpp  game.h  meson.build  move_generator.h
src/game/include/: game.h
src/game/src/: game.cpp
src/logging/: logging.cpp  logging.h  meson.build
src/logging/include/: logging.h
src/logging/src/: logging.cpp
src/main/: main.cpp  meson.build  options.h
src/main/console_runner/: console_runner.cpp  console_runner.h  meson.build
src/move/: meson.build
src/move/include/: move_generator.h
src/printer/: printer.h
src/server/: meson.build  server.cpp  server.h
src/server/core/: const.h  id_pool.h  types.h
src/server/room/: meson.build  room.cpp  room.h  room_service.cpp  room_service.h
src/server/snapshot/: meson.build  snapshot_handler.cpp  snapshot_handler.h  snapshots.h
src/server/user/: meson.build  user.cpp  user.h  user_service.cpp  user_service.h
src/ui/console/: console_ui.cpp  console_ui.h  header.txt  meson.build
src/utils/: enums_to_string.h  utils.h
src/utils/memory_manager/: memory_manager.h
subprojects/: dotenv-cpp.wrap
tests/: meson.build
tests/engine/: meson.build  test_fen_constructor.cpp  test_game.cpp  test_make_unmake.cpp  test_movegen.cpp  test_perft.cpp  test_utils.h
