project(
  'better-chess-engine',
  'cpp',
  version : '0.1.0',
  default_options: [
    'cpp_std=c++23',
    'warning_level=3',
    'default_library=static',
    ]
)

#------------------------------#
#        PROJECT MODE          #
#------------------------------#

mode            = get_option('mode')
generate_magics = get_option('generate_magics')
console         = get_option('console')
server          = get_option('server')

# Global project arguments
add_project_arguments(
  '-DPROJECT_ROOT="' + meson.project_source_root() + '"',
  language: 'cpp'
)

# Performance arguments
if mode in ['profile', 'benchmark', 'release']
  add_project_arguments(
    '-Doptimization=3',
    '-march=native',
    '-mtune=native',
    '-funroll-loops',
    '-fomit-frame-pointer',
    language: 'cpp',
  )
endif

if mode == 'debug'
  add_project_arguments(
    '-DBUILD_DEBUG',
    '-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE',
    '-Db_sanitize=address',
    '-Db_lundef=false',
    '-Doptimization=0',
    language: 'cpp'
  )

elif mode == 'profile'
  add_project_arguments(
    '-DBUILD_PROFILE',
    '-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE',
    '-Db_pch=true',
    language: 'cpp'
  )

elif mode == 'release'
  add_project_arguments(
    '-DBUILD_RELEASE',
    '-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_WARN',
    language: 'cpp'
  )

elif mode == 'test'
  add_project_arguments(
    '-DBUILD_TEST',
    '-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE',
    '-Db_sanitize=address',
    '-Db_lundef=false',
    '-Doptimization=0',
    language: 'cpp'
  )

  add_project_link_arguments(
    '-pthread',
    '-lgtest',
    '-lgtest_main',
    language: 'cpp'
  )

elif mode == 'benchmark'
  add_project_arguments(
    '-DBUILD_BENCHMARK',
    '-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_WARN',
    '-Db_pch=true',
    language: 'cpp'
  )

  add_project_link_arguments(
    '-pthread',
    language: 'cpp'
  )
endif

if generate_magics == true
  if (server == true) or (console == true) or mode in ['test', 'benchmark', 'release']
    error('Cannot use generate_magics with server/console option or release/test/benchmark build modes.')
  else
    add_project_arguments(
      '-DGENERATE_MAGICS',
      language: 'cpp'
    )

  add_project_link_arguments(
    '-fopenmp',
    language: 'cpp'
  )
  endif
endif

if console == true
  if generate_magics == true
    error('Cannot use console with generate_magic option.')
  else
    add_project_arguments(
      '-DPLAY_CONSOLE',
      language: 'cpp'
    )
  endif
endif


#------------------------------#
#             DEPS             #
#------------------------------#

# Google Benchmark (subprojects/google-benchmark.wrap → export benchmark_dep)
if mode == 'benchmark'
  benchmark_dep = dependency(
    'google-benchmark',
    required: mode == 'benchmark'
  )
endif


inc_src = include_directories('src')


subdir('src/')

if mode == 'test'
  subdir('tests')
endif