# Build mode
option(
    'mode',
    type        : 'combo',
    choices     : ['debug', 'profile', 'release', 'test', 'benchmark'],
    value       : 'debug',
    description : 'Build mode: debug, profile, release, test or benchmark.'
)

# Generate magics mode
option(
    'generate_magics',
    type        : 'boolean',
    value       : false,
    description : 'Wether we want to generate new magic numbers.'
)

# Play the game in the console instead of using the Website
option(
    'console',
    type        : 'boolean',
    value       : false,
    description : 'Wether we want to play the game in the console.'
)

# Start a server to enable remote players
option(
    'server',
    type        : 'boolean',
    value       : false,
    description : 'Wether we want to start the server to play in multiplayer.'
)